<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.nanyixuan.zzyl_andorid.view.fragment.TicketFragment">

    <LinearLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#202628">

        <ImageButton
            android:id="@+id/btn_showSideMenu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:padding="12dp"
            android:scaleType="centerInside"
            android:src="@mipmap/back"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/yuanqumenpiao"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="6117dp" />

        <ImageButton
            android:id="@+id/show_QR"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:padding="12dp"
            android:scaleType="centerInside"
            android:src="@mipmap/qr_code"
            tools:ignore="ContentDescription"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="6117dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/qingxuanzenindemenpiao"
                android:textColor="#9ac899"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#ebebeb" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/qingxuanzenindemenpiao"
                android:textColor="#5b5b5b"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textColor="#696969"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:lines="2"
                    android:padding="10dp"
                    android:text="标准票\n  (1.4+M)" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:scaleType="centerInside"
                        android:src="@mipmap/jiajiajia" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#5b5b5b"
                        android:textSize="35dp" />

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:scaleType="centerInside"
                        android:src="@mipmap/jianjianjian" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:lines="2"
                    android:padding="10dp"
                    android:textColor="#696969"
                    android:text="儿童票\n  (1.0-1.4M)" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:scaleType="centerInside"
                        android:src="@mipmap/jiajiajia" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#5b5b5b"
                        android:textSize="35dp" />

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:scaleType="centerInside"
                        android:src="@mipmap/jianjianjian" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textColor="#696969"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:lines="2"
                    android:padding="10dp"
                    android:text="老年票\n  (65岁以上)" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:scaleType="centerInside"
                        android:src="@mipmap/jiajiajia" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#5b5b5b"
                        android:textSize="35dp" />

                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#FFFFFF"
                        android:scaleType="centerInside"
                        android:src="@mipmap/jianjianjian" />
                </LinearLayout>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#ebebeb" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/xuanzedaofangriqi"
                android:textColor="#5b5b5b"
                android:textSize="20sp" />
            <LinearLayout
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:textColor="#FFFFFF"
                    android:background="#88c885"
                    android:text="@string/jinri"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <Button
                    android:layout_marginLeft="5dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:textColor="#FFFFFF"
                    android:background="#399338"
                    android:text="@string/daofangriqi"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                app:mcv_calendarMode="month"
                app:mcv_showOtherDates="all"
                app:mcv_selectionColor="@android:color/holo_red_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>